--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cssnano": "^6.0.1",
     "file-loader": "^6.2.0",
     "glob": "^10.2.2",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.1",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
