--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.5",
+    "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.14",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "cssnano": "^6.0.1",
+    "eslint": "^8.41.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "glob": "^10.2.2",
     "html-webpack-externals-plugin": "^3.8.0",
@@ -38,6 +47,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^19.0.4",
     "lib-flexible": "^0.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
