--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "@cyroytest/large-number": "^1.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "lib-flexible": "^0.3.2",
     "react": "^18.2.0",
