--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^10.2.2",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.1",
