--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch webpack.dev.js",
     "build:ssr": "webpack --config webpack.ssr.js",
+    "build:stat": "webpack --config webpack.prod.js --json > stat.json",
     "dev": "webpack-dev-server --config webpack.dev.js --hot"
   },
   "keywords": [],
@@ -42,9 +43,11 @@
     "postcss-loader": "^7.3.0",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "0.5.1",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.81.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
   },
