--- a/package.json
+++ b/package.json
@@ -45,14 +45,18 @@
     "raw-loader": "0.5.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "thread-loader": "^4.0.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.81.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-parallel-uglify-plugin": "^2.0.0"
   },
   "dependencies": {
     "@cyroytest/large-number": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "lib-flexible": "^0.3.2",
