--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.3.0",
+    "purgecss-webpack-plugin": "^5.0.0",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "0.5.1",
     "speed-measure-webpack-plugin": "^1.5.0",
