--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.1",
+    "image-webpack-loader": "^8.1.0",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.3.0",
